--- a/tox.ini
+++ b/tox.ini
@@ -1,61 +1,41 @@
 [tox]
-description = list of environments against which tox runs the tests
+description = Run tests and quality checks
 envlist =
-    clean
-    check
-    reformat
-    coverage
-    py36
-    py37
     py38
-skipsdist = True
+    py39
+    py310
+    py311
+    lint
+    coverage
+isolated_build = True
 
 [testenv]
-basepython =
-    py36: {env:PYTHON:python3.6}
-    py37: {env:PYTHON:python3.7}
-    py38: {env:PYTHON:python3.8}
-    {clean,check,reformat,coverage}: {env:PYTHON:python3}
-setenv =
-    PYTHONUNBUFFERED=yes
-passenv =
-    *
 deps =
-    flit
-    pygments
+    pytest>=7.0
+    pytest-cov>=4.0
+    numpy>=1.20
+    scipy>=1.7
 commands =
-    flit install --symlink
-    pytest {posargs: -vvv}
+    pytest {posargs:tests}
 
 [testenv:coverage]
-description = measures code coverage
 commands =
-    flit install --symlink
-    pytest --cov=src tests/ --cov-report term --cov-report html
+    pytest --cov=skaero --cov-report=xml --cov-report=term-missing tests/
 
-[testenv:check]
-description = this environments checks for isort and black code style
+[testenv:lint]
 deps =
-	isort
-	black
-skip_install = true
+    black>=22.0
+    isort>=5.0
+    flake8>=4.0
 commands =
-    isort --check-only --diff --recursive --project skaero --section-default THIRDPARTY src
-    black --check src
+    black --check src tests
+    isort --check-only src tests
+    flake8 src tests
 
-
-[testenv:reformat]
-description = reformats the code using black and isort
-deps =
-	black
-	isort
-skip_install = true
-commands =
-    isort --recursive --project skaero --section-default THIRDPARTY src
-    black src
-
-[testenv:clean]
-deps = coverage
-skip_install = true
-commands = coverage erase
+[gh-actions]
+python =
+    3.8: py38, lint, coverage
+    3.9: py39
+    3.10: py310
+    3.11: py311
 
